[gd_scene load_steps=30 format=1]

[ext_resource path="res://scripts/cenario1.gd" type="Script" id=1]
[ext_resource path="res://sprites/Mapas_Itens/Mushroom expansion/Backgrounds/bg_grasslands.png" type="Texture" id=2]
[ext_resource path="res://sprites/Mapas_Itens/Tiles/grassMid.png" type="Texture" id=3]
[ext_resource path="res://sprites/Mapas_Itens/Tiles/grassCliffRight.png" type="Texture" id=4]
[ext_resource path="res://sprites/Mapas_Itens/Tiles/grassCliffLeft.png" type="Texture" id=5]
[ext_resource path="res://scenes/fim_fase.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/personagem.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/botao_azul.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/Mapas_Itens/Tiles/ladder_top.png" type="Texture" id=9]
[ext_resource path="res://sprites/Mapas_Itens/Tiles/ladder_mid.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.8723, 29.5385 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 138, 374 )

[sub_resource type="Animation" id=3]

length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("escada_area2/escada_mexe:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 661, -369 ), Vector2( 661, -312 ), Vector2( 661, -256 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("escada_area1/escada_mexe1:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 661, -369 ), Vector2( 661, -312 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 4 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": ""
} ]
}

[sub_resource type="Animation" id=4]

length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("escada_area2/escada_mexe:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 661, -256 ), Vector2( 661, -312 ), Vector2( 661, -369 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("escada_area1/escada_mexe1:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2, 4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 661, -312 ), Vector2( 661, -312 ), Vector2( 661, -369 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("escada_area/escada:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 661, -369 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("escada_area2/escada_mexe:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 661, -369 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("escada_area1/escada_mexe1:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 661, -369 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 696.565, -399.52, 696.565, -333.658, 682.794, -334.856, 682.794, -347.429 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 639.685, -347.429, 640.883, -335.455, 625.315, -334.856, 625.914, -400.118 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 639.685, -347.429, 625.914, -400.118, 633.099, -404.309, 637.29, -399.52, 637.889, -392.335 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 639.685, -347.429, 637.889, -392.335, 682.794, -391.736, 682.794, -347.429 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 696.565, -399.52, 682.794, -347.429, 682.794, -391.736, 684.59, -400.717, 691.775, -404.309 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( 683.393, -332.67, 683.393, -348.237, 695.966, -347.04, 695.966, -276.987, 683.992, -290.758 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 637.889, -277.586, 625.914, -276.987, 625.914, -347.04, 637.889, -290.758 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 637.889, -290.758, 625.914, -347.04, 639.086, -347.04, 639.086, -333.269 )

[sub_resource type="ConvexPolygonShape2D" id=14]

custom_solver_bias = 0.0
points = Vector2Array( 683.992, -290.758, 637.889, -290.758, 639.086, -333.269, 683.393, -332.67 )

[sub_resource type="ConvexPolygonShape2D" id=15]

custom_solver_bias = 0.0
points = Vector2Array( 683.992, -290.758, 695.966, -276.987, 683.992, -277.586 )

[sub_resource type="ConvexPolygonShape2D" id=16]

custom_solver_bias = 0.0
points = Vector2Array( 639.086, -220.342, 625.914, -220.342, 625.315, -290.993, 637.29, -289.796, 638.488, -277.821, 639.086, -234.113 )

[sub_resource type="ConvexPolygonShape2D" id=17]

custom_solver_bias = 0.0
points = Vector2Array( 682.794, -277.222, 682.794, -290.993, 695.966, -289.796, 695.966, -221.54, 683.393, -234.113 )

[sub_resource type="ConvexPolygonShape2D" id=18]

custom_solver_bias = 0.0
points = Vector2Array( 695.966, -221.54, 683.393, -220.941, 683.393, -234.113 )

[sub_resource type="ConvexPolygonShape2D" id=19]

custom_solver_bias = 0.0
points = Vector2Array( 639.086, -234.113, 638.488, -277.821, 682.794, -277.222, 683.393, -234.113 )

[node name="cenario2" type="Node"]

[node name="cenario2_static" type="StaticBody2D" parent="."]

transform/pos = Vector2( 173, 675 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 19.6431, 0, 0, 0.66903, 4.49999, -16.7693 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 2.71937, 0, 0, 0.66903, 35.4918, -35.5255 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 1 )
shapes/2/transform = Matrix32( 14.2437, 0, 0, 0.40625, 565, -113 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 1 )
shapes/3/transform = Matrix32( 5.71094, 0, 0, 0.40625, 768.797, -384 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 2 )
shapes/4/transform = Matrix32( 0.210993, 0, 0, 1, -176.25, -323 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 2 )
shapes/5/transform = Matrix32( 0.0673759, 0, 0, 1, 853, -323 )
shapes/5/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="ceu" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 333, -361 )
texture = ExtResource( 2 )

[node name="chao" type="Sprite" parent="cenario2_static"]

texture = ExtResource( 3 )

[node name="chao7" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 495, -91 )
texture = ExtResource( 3 )

[node name="chao6" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 632, -91 )
texture = ExtResource( 3 )

[node name="chao5" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 564, -91 )
texture = ExtResource( 3 )

[node name="chao1" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 138, 0 )
texture = ExtResource( 3 )

[node name="chao2" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( -138.332, -0.00852966 )
texture = ExtResource( 3 )

[node name="chao3" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( -69.0143, 0 )
texture = ExtResource( 3 )

[node name="chao4" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 69.2173, 0 )
texture = ExtResource( 3 )

[node name="chao_D" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 207, 0 )
texture = ExtResource( 4 )

[node name="chao_D3" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 702, -91 )
texture = ExtResource( 4 )

[node name="chao_D2" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 804, -361 )
texture = ExtResource( 4 )

[node name="chao_E" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 426, -91 )
texture = ExtResource( 5 )

[node name="chao_E1" type="Sprite" parent="cenario2_static"]

transform/pos = Vector2( 734, -361 )
texture = ExtResource( 5 )

[node name="anim" type="AnimationPlayer" parent="cenario2_static"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/escada_descendo = SubResource( 3 )
anims/escada_subindo = SubResource( 4 )
anims/idle = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="cenario2_static"]

transform/pos = Vector2( 4.49999, -16.7693 )
transform/scale = Vector2( 19.6431, 0.66903 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="buttonCol" type="CollisionShape2D" parent="cenario2_static"]

transform/pos = Vector2( 35.4918, -35.5255 )
transform/scale = Vector2( 2.71937, 0.66903 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D1" type="CollisionShape2D" parent="cenario2_static"]

transform/pos = Vector2( 565, -113 )
transform/scale = Vector2( 14.2437, 0.40625 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D3" type="CollisionShape2D" parent="cenario2_static"]

transform/pos = Vector2( 768.797, -384 )
transform/scale = Vector2( 5.71094, 0.40625 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 3

[node name="fim_fase" parent="cenario2_static" instance=ExtResource( 6 )]

transform/pos = Vector2( 794, -441 )

[node name="personagem" parent="cenario2_static" instance=ExtResource( 7 )]

transform/pos = Vector2( -74, -65 )

[node name="parede_E" type="CollisionShape2D" parent="cenario2_static"]

transform/pos = Vector2( -176.25, -323 )
transform/scale = Vector2( 0.210993, 1 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 4

[node name="parede_D" type="CollisionShape2D" parent="cenario2_static"]

transform/pos = Vector2( 853, -323 )
transform/scale = Vector2( 0.0673759, 1 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 5

[node name="botao_azul" parent="cenario2_static" instance=ExtResource( 8 )]

transform/pos = Vector2( 35.4571, -70.9141 )

[node name="escada_area" type="Area2D" parent="cenario2_static"]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 7 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 8 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 9 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 10 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="escada" type="Sprite" parent="cenario2_static/escada_area"]

transform/pos = Vector2( 661, -369 )
texture = ExtResource( 9 )

[node name="colyn_escada" type="CollisionPolygon2D" parent="cenario2_static/escada_area"]

build_mode = 0
polygon = Vector2Array( 625.315, -334.856, 625.914, -400.118, 633.099, -404.309, 637.29, -399.52, 637.889, -392.335, 682.794, -391.736, 684.59, -400.717, 691.775, -404.309, 696.565, -399.52, 696.565, -333.658, 682.794, -334.856, 682.794, -347.429, 639.685, -347.429, 640.883, -335.455 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="escada_area1" type="Area2D" parent="cenario2_static"]

input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 12 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 13 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 14 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 15 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="escada_mexe1" type="Sprite" parent="cenario2_static/escada_area1"]

transform/pos = Vector2( 661, -312 )
texture = ExtResource( 10 )

[node name="colyn_escada1" type="CollisionPolygon2D" parent="cenario2_static/escada_area1"]

build_mode = 0
polygon = Vector2Array( 625.914, -276.987, 625.914, -347.04, 639.086, -347.04, 639.086, -333.269, 683.393, -332.67, 683.393, -348.237, 695.966, -347.04, 695.966, -276.987, 683.992, -277.586, 683.992, -290.758, 637.889, -290.758, 637.889, -277.586 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="escada_area2" type="Area2D" parent="cenario2_static"]

input/pickable = true
shapes/0/shape = SubResource( 16 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 17 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 18 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 19 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="escada_mexe" type="Sprite" parent="cenario2_static/escada_area2"]

transform/pos = Vector2( 661, -256 )
texture = ExtResource( 10 )

[node name="colyn_escada2" type="CollisionPolygon2D" parent="cenario2_static/escada_area2"]

build_mode = 0
polygon = Vector2Array( 625.914, -220.342, 625.315, -290.993, 637.29, -289.796, 638.488, -277.821, 682.794, -277.222, 682.794, -290.993, 695.966, -289.796, 695.966, -221.54, 683.393, -220.941, 683.393, -234.113, 639.086, -234.113, 639.086, -220.342 )
shape_range = Vector2( 0, 3 )
trigger = false

[connection signal="body_enter" from="cenario2_static/escada_area" to="cenario2_static" method="_on_escada_area_body_enter"]

[connection signal="body_enter" from="cenario2_static/escada_area1" to="cenario2_static" method="_on_escada_area1_body_enter"]

[connection signal="body_enter" from="cenario2_static/escada_area2" to="cenario2_static" method="_on_escada_area2_body_enter"]


